Chapter05/ec-external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
      - ip: 172.16.58.69
    ports:
      - port: 80
