Chapter05/ec-kubia-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: ec-headless-svc
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
