Chapter05/ec-kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ec-svc-kubia
spec:
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: kubia
