Chapter05/ec-kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ec-ingress-kubia
spec:
  tls:
    - hosts:
        - "ingress.tt.io"
      secretName: tls-secret
  rules:
    - host: ingress.tt.io
      http:
        paths:
          - backend:
              service:
                name: ec-svc-kubia
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
